kube-setup/kube-monitor/monitor-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: monitor-pod
  namespace: kube-monitor
spec:
  serviceAccountName: kube-monitor-account
  containers:
    - name: kube-monitor
      image: amitkshirsagar13/kube-monitor:latest
      resources:
        limits:
          cpu: 500m
          memory: 300Mi
        requests:
          cpu: 200m
          memory: 256Mi
